<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/lat1"
        android:layout_width="152dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/enter_latitude_for_p1"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/lat2"
        app:layout_constraintEnd_toStartOf="@+id/long1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <EditText
        android:id="@+id/lat2"
        android:layout_width="152dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_latitude_for_p2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/long2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="136dp" />

    <EditText
        android:id="@+id/long1"
        android:layout_width="159dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/enter_longitude_for_p1"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/long2"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_longitude_for_p2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/long1" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="105dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toTopOf="@+id/distanceLabel"
        app:layout_constraintEnd_toStartOf="@+id/clearBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginEnd="172dp"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="207dp" />

    <TextView
        android:id="@+id/distanceLabel"
        android:layout_width="86dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="293dp" />

    <TextView
        android:id="@+id/bearingLabel"
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="380dp"
        android:text="@string/bearing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/distanceLabel"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>